objects/FieloEE__Section__c.object
<CustomObject>
    <description>Predetermined compartments that make up a page in the members’ portal. Components are placed in the sections.</description>
    <fields>
        <fullName>F_PRM_Asynchronous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asynchronous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_PRM_PublishingDescription__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_PublishingInclude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Publishing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_PRM_PublishingParentStatus__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publishing - Parent Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_PublishingPublisherCountry__c</fullName>
        <formula>F_PRM_PublishingPublisher__r.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publisher Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_PublishingPublisher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publisher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Section</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_PublishingStatusImage__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publishing Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_PublishingTimestamp__c</fullName>
        <label>Published On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FieloEE__CSSClasses__c</fullName>
        <label>CSSClasses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Class__c</fullName>
        <formula>IF( ISNULL( FieloEE__Parent__c ) || FieloEE__Parent__c = &apos;&apos; , &apos;Parent&apos; , &apos;Sub section&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Menu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Menu</label>
        <referenceTo>FieloEE__Menu__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>FieloEE__Section__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingCountry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Track the PRM Country</description>
        <inlineHelpText>Track the PRM Country</inlineHelpText>
        <label>PublishingCountry</label>
        <referenceTo>PRMCountry__c</referenceTo>
        <relationshipLabel>PRMCountrySection</relationshipLabel>
        <relationshipName>PRMCountrySection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublishingDescription__c</fullName>
        <description>Small description of last publication</description>
        <inlineHelpText>Small description of last publication</inlineHelpText>
        <label>PublishingDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PublishingGoldenId__c</fullName>
        <description>Track the source Id</description>
        <inlineHelpText>Track the source Id</inlineHelpText>
        <label>PublishingGoldenId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingIsUpdated__c</fullName>
        <description>Identify if the record has been updated</description>
        <formula>IF( OR(LastModifiedDate  &gt; PublishingTimestamp__c,ISBLANK(PublishingTimestamp__c)),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identify if the record has been updated</inlineHelpText>
        <label>PublishingIsUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PublishingOdasevaId__c</fullName>
        <externalId>true</externalId>
        <label>PublishingOdasevaId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingPRMCountryId__c</fullName>
        <description>Field added by odaseva for publishing, do not add to layout</description>
        <formula>IF( NOT(ISBLANK(FieloEE__Menu__c)),FieloEE__Menu__r.F_PRM_Country__c, 
IF(NOT(ISBLANK(FieloEE__Parent__c)) &amp;&amp; NOT(ISBLANK(FieloEE__Parent__r.FieloEE__Menu__c)) ,FieloEE__Parent__r.FieloEE__Menu__r.F_PRM_Country__c, 
IF(NOT(ISBLANK(FieloEE__Parent__r.FieloEE__Parent__c)) &amp;&amp; NOT(ISBLANK(FieloEE__Parent__r.FieloEE__Parent__r.FieloEE__Menu__c)) ,FieloEE__Parent__r.FieloEE__Parent__r.FieloEE__Menu__r.F_PRM_Country__c, 
&apos;&apos;)))</formula>
        <label>PublishingPRMCountryId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingPRMCountryName__c</fullName>
        <description>Field created for Odaseva publishing, do not add to layout</description>
        <formula>IF( NOT(ISBLANK(FieloEE__Menu__c)),FieloEE__Menu__r.F_PRM_Country__r.Name  , 
IF(NOT(ISBLANK(FieloEE__Parent__c)) &amp;&amp; NOT(ISBLANK(FieloEE__Parent__r.FieloEE__Menu__c)) ,FieloEE__Parent__r.FieloEE__Menu__r.F_PRM_Country__r.Name,
IF(NOT(ISBLANK(FieloEE__Parent__r.FieloEE__Parent__c)) &amp;&amp; NOT(ISBLANK(FieloEE__Parent__r.FieloEE__Parent__r.FieloEE__Menu__c)) ,FieloEE__Parent__r.FieloEE__Parent__r.FieloEE__Menu__r.F_PRM_Country__r.Name,
&apos;&apos;)))</formula>
        <label>PublishingPRMCountryName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingPublisher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Track who was the last publisher</description>
        <inlineHelpText>Track who was the last publisher</inlineHelpText>
        <label>PublishingPublisher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PublisherFieloEESectionc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublishingSrcUrl__c</fullName>
        <formula>HYPERLINK(&quot;https://cs21.salesforce.com/&quot;&amp;PublishingGoldenId__c,&quot;Source Link&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PublishingSrcUrl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingStatusImage__c</fullName>
        <description>Identify at first sight that the record is set for publication</description>
        <formula>CASE(TEXT(PublishingStatus__c),&quot;Ready for Publication&quot;,IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Ready for Publication&quot;),&quot;Awaiting Publication&quot;,IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Awaiting Publication&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identify at first sight that the record is set for publication</inlineHelpText>
        <label>PublishingStatusImage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingStatus__c</fullName>
        <label>PublishingStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Publication</fullName>
                </value>
                <value>
                    <fullName>Awaiting Publication</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublishingTgtUrl__c</fullName>
        <formula>HYPERLINK(&quot;https://cs43.salesforce.com/apex/ODA_PRMPublisher?id=&quot;&amp;PublishingGoldenId__c&amp;&quot;&amp;obj=FieloEE__Section__c&quot;,&quot;Target Link&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PublishingTgtUrl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingTimestamp__c</fullName>
        <description>Date and time of the last publication</description>
        <inlineHelpText>Date and time of the last publication</inlineHelpText>
        <label>PublishingTimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TECH_MigrationUniqueID__c</fullName>
        <description>Unique ID to be used by ODASEVA for synchronizing the records between environments</description>
        <externalId>true</externalId>
        <label>Migration Unique ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Section</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Section Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Section_Parent_Validation</fullName>
        <active>true</active>
        <description>Section can be related to either Parent Section or Menu at the same time.</description>
        <errorConditionFormula>IF( NOT($User.BypassVR__c) &amp;&amp; FieloEE__Parent__c != null &amp;&amp; FieloEE__Menu__c !=null , true, false)</errorConditionFormula>
        <errorMessage>Section can be related to either Parent Section or Menu at the same time.</errorMessage>
    </validationRules>
</CustomObject>